2003-03-19  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (rs6000_stack_info): Only require a frame
	when debugging on XCOFF targets.

2003-02-26  Alan Modra  <amodra@bigpond.net.au>

	PR target/9681
	* tlink.c (scan_linker_output): Drop leading '.' from symbol names.

2003-03-22  Alan Modra  <amodra@bigpond.net.au>

	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.

2002-09-19 Dale Johannesen <dalej@apple.com>

	* rtl.h: Add NOTE_PRECONDITIONED.
	* unroll.c: Set it.
	* loop.c: Set loop_info->preconditioned from it.
	* doloop.c: Permit doloop treatment when loop_info->preconditioned.

2002-07-10  Roger Sayle  <roger@eyesopen.com>

	PR c/2454
	* combine.c (nonzero_bits): LOAD_EXTEND_OP should only apply
	to SUBREGs of MEMs.  (num_sign_bit_copies): Likewise.

2003-04-23  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (x86_64_sign_extended_value): Don't allow
	tls_symbolic_operand.
	(x86_64_zero_extended_value): Likewise.

2003-04-22  Release Manager

	* GCC 3.2.3 Released.

2003-04-16  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR/10271
	* pa-protos.h (function_arg): Remove last argument.
	* pa.c (function_arg): Likewise.  Use CUMULATIVE_ARGS struct instead.
	* pa.h (struct hppa_args): Add member incoming. 
	(INIT_CUMULATIVE_ARGS, INIT_CUMULATIVE_INCOMING_ARGS): Initialize
	member incoming.
	(FUNCTION_ARG): Revise call to function_arg.
	(FUNCTION_INCOMING_ARG): Delete.

2003-04-15  Jason Merrill  <jason@redhat.com>

	PR middle-end/10336, c++/10401
	* jump.c (never_reached_warning): Also stop looking if we reach the 
	beginning of the function.

2003-04-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/10377
	* config/cris/cris.md ("*mov_sideqi", "*mov_sidehi")
	("*mov_sidesi", "*mov_sideqi_mem", "*mov_sidehi_mem")
	("*mov_sidesi_mem", "*clear_sidesi", "*clear_sidehi")
	("*clear_sideqi", "*ext_sideqihi", "*ext_sideqisi")
	("*ext_sidehisi", "*op_sideqi", "*op_sidehi", "*op_sidesi")